process_spider_input

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,9 @@ follow_imports = skip
 [mypy-scrapy.downloadermiddlewares.httpproxy]
 ignore_errors = True
 
+[mypy-scrapy.spidermiddlewares.httperror]
+ignore_errors = True
+
 [mypy-scrapy.interfaces]
 ignore_errors = True
 
