--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,6 +18,7 @@ jobs:
         - python-version: 3.8
           env:
             TOXENV: pylint
+            TOX_PIP_VERSION: 20.3.3
         - python-version: 3.9
           env:
             TOXENV: typing
@@ -36,5 +37,8 @@ jobs:
     - name: Run check
       env: ${{ matrix.env }}
       run: |
+        if [[ ! -z "$TOX_PIP_VERSION" ]]; then
+            pip install tox-pip-version
+        fi
         pip install -U tox
         tox
