suppress warnings from twisted

--- a/pytest.ini
+++ b/pytest.ini
@@ -20,3 +20,5 @@ addopts =
     --ignore=docs/utils
 markers =
     only_asyncio: marks tests as only enabled when --reactor=asyncio is passed
+filterwarnings=
+    ignore::DeprecationWarning:twisted
