more selective ignoring

--- a/pytest.ini
+++ b/pytest.ini
@@ -21,4 +21,4 @@ addopts =
 markers =
     only_asyncio: marks tests as only enabled when --reactor=asyncio is passed
 filterwarnings=
-    ignore::DeprecationWarning:twisted
+    ignore::DeprecationWarning:twisted.web.test.test_webclient
