--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     #mitmproxy >= 5.3.0; python_version >= '3.9' and implementation_name != 'pypy'
     mitmproxy >= 4.0.4; python_version >= '3.7' and python_version < '3.9' and implementation_name != 'pypy'
     mitmproxy >= 4.0.4, < 5; python_version >= '3.6' and python_version < '3.7' and platform_system != 'Windows' and implementation_name != 'pypy'
+    git+https://github.com/scrapy/xtractmime.git@compute-mime#egg=xtractmime
     # Extras
     botocore>=1.4.87
 passenv =
