--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ passenv =
 #allow tox virtualenv to upgrade pip/wheel/setuptools
 download = true
 commands =
-    py.test --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 docs scrapy tests}
+    py.test --cov=scrapy --cov-report=html --cov-report= {posargs:--durations=10 docs scrapy tests}
 install_command =
     pip install -U -ctests/upper-constraints.txt {opts} {packages}
 
