--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
     #mitmproxy >= 5.3.0; python_version >= '3.9' and implementation_name != 'pypy'
     mitmproxy >= 4.0.4; python_version >= '3.7' and python_version < '3.9' and implementation_name != 'pypy'
     mitmproxy >= 4.0.4, < 5; python_version >= '3.6' and python_version < '3.7' and platform_system != 'Windows' and implementation_name != 'pypy'
-    git+https://github.com/scrapy/xtractmime.git@binary#egg=xtractmime
+    git+https://github.com/scrapy/xtractmime.git@main#egg=xtractmime
     # Extras
     botocore>=1.4.87
 passenv =
@@ -79,6 +79,7 @@ deps =
     Twisted[http2]==17.9.0
     w3lib==1.17.0
     zope.interface==4.1.3
+    git+https://github.com/scrapy/xtractmime.git@main#egg=xtractmime
     -rtests/requirements-py3.txt
 
     # mitmproxy 4.0.4+ requires upgrading some of the pinned dependencies
