--- a/tox.ini
+++ b/tox.ini
@@ -84,7 +84,7 @@ deps =
     w3lib==1.17.0
     zope.interface==4.1.3
     git+https://github.com/scrapy/xtractmime.git@main#egg=xtractmime
-    -rtests/requirements-py3.txt
+    -rtests/requirements.txt
 
     # mitmproxy 4.0.4+ requires upgrading some of the pinned dependencies
     # above, hence we do not install it in pinned environments at the moment
