Wrap 3.10 as a string

--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -17,10 +17,10 @@ jobs:
         - python-version: 3.9
           env:
             TOXENV: py
-        - python-version: 3.10
+        - python-version: "3.10"
           env:
             TOXENV: py
-        - python-version: 3.10
+        - python-version: "3.10"
           env:
             TOXENV: asyncio
         - python-version: pypy3
