ci: enforce f-string format

--- a/tox.ini
+++ b/tox.ini
@@ -59,6 +59,7 @@ deps =
     Twisted[http2]>=17.9.0
     pytest-flake8
     flake8==3.9.2  # https://github.com/tholo/pytest-flake8/issues/81
+    flake8-sfs
 commands =
     py.test --flake8 {posargs:docs scrapy tests}
 
