--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -17,6 +17,9 @@ jobs:
         - python-version: 3.8
           env:
             TOXENV: py
+        - python-version: 3.8
+          env:
+            TOXENV: asyncio
         # https://twistedmatrix.com/trac/ticket/9990
         #- python-version: 3.9
           #env:
