Improve test_blob_path_consistency and extend extra-deps to support test_blob_path_consistency

--- a/tox.ini
+++ b/tox.ini
@@ -127,6 +127,8 @@ deps =
     robotexclusionrulesparser
     Pillow>=4.0.0
     Twisted[http2]>=17.9.0
+    google-cloud-storage==1.29.0
+
 
 [testenv:asyncio]
 commands =
