--- a/tox.ini
+++ b/tox.ini
@@ -123,7 +123,7 @@ setenv =
 deps =
     {[testenv]deps}
     boto
-    reppy
+    reppy>0.4.10
     robotexclusionrulesparser
     Pillow>=4.0.0
     Twisted[http2]>=17.9.0
