--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -6,7 +6,7 @@ pytest
 pytest-cov
 pytest-xdist
 sybil >= 1.3.0  # https://github.com/cjw296/sybil/issues/20#issuecomment-605433422
-testfixtures >= 6.8.13
+testfixtures
 uvloop < 0.15.0; platform_system != "Windows" and python_version == '3.6'
 uvloop; platform_system != "Windows" and python_version > '3.6'
 
