--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,6 @@ deps =
     mitmproxy >= 4.0.4, < 8; python_version < '3.9' and implementation_name != 'pypy'
     # newer markupsafe is incompatible with deps of old mitmproxy (which we get on Python 3.7 and lower)
     markupsafe < 2.1.0; python_version < '3.8' and implementation_name != 'pypy'
-    git+https://github.com/scrapy/xtractmime.git@main#egg=xtractmime
     # Extras
     botocore>=1.4.87
 passenv =
@@ -86,7 +85,7 @@ deps =
     w3lib==1.17.0
     zope.interface==5.1.0
     lxml==4.3.0
-    git+https://github.com/scrapy/xtractmime.git@main#egg=xtractmime
+    xtractmime==0.1.0
     -rtests/requirements.txt
 
     # mitmproxy 4.0.4+ requires upgrading some of the pinned dependencies
