Implement scrapy.utils.response.get_response_class

--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,8 @@ commands =
     pytest --flake8 {posargs:docs scrapy tests}
 
 [testenv:pylint]
-basepython = python3
+# extra deps require Python 3.8 or lower
+basepython = python3.8
 deps =
     {[testenv:extra-deps]deps}
     pylint==2.12.2
@@ -118,6 +119,8 @@ setenv =
     {[pinned]setenv}
 
 [testenv:extra-deps]
+# reppy requires Python 3.8 or lower
+basepython = python3.8
 deps =
     {[testenv]deps}
     boto
