--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -20,7 +20,10 @@ jobs:
         - python-version: "3.10"
           env:
             TOXENV: py
-        - python-version: "3.10"
+        - python-version: "3.11"
+          env:
+            TOXENV: py
+        - python-version: "3.11"
           env:
             TOXENV: asyncio
 
