--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -20,12 +20,16 @@ jobs:
         - python-version: "3.10"
           env:
             TOXENV: py
-        - python-version: "3.11"
-          env:
-            TOXENV: py
-        - python-version: "3.11"
+        - python-version: "3.10"
           env:
             TOXENV: asyncio
+# no binary package for lxml for 3.11 yet
+#        - python-version: "3.11"
+#          env:
+#            TOXENV: py
+#        - python-version: "3.11"
+#          env:
+#            TOXENV: asyncio
 
     steps:
     - uses: actions/checkout@v3
