Added config and precommit files for isort

--- a/tox.ini
+++ b/tox.ini
@@ -79,6 +79,12 @@ commands =
     python setup.py sdist
     twine check dist/*
 
+[testenv:isort]
+deps=
+    isort==5.10.1
+commands=
+    isort --check-only {posargs:.}
+
 [pinned]
 deps =
     cryptography==3.3
