Silence the scrapy.responsetypes deprecation warning in tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -22,7 +22,8 @@ markers =
     only_asyncio: marks tests as only enabled when --reactor=asyncio is passed
     only_not_asyncio: marks tests as only enabled when --reactor=asyncio is not passed
 filterwarnings =
-    ignore:scrapy.downloadermiddlewares.decompression is deprecated
     ignore:Module scrapy.utils.reqser is deprecated
+    ignore:scrapy.downloadermiddlewares.decompression is deprecated
+    ignore:scrapy.responsetypes is deprecated
     ignore:typing.re is deprecated
     ignore:typing.io is deprecated
