--- a/tox.ini
+++ b/tox.ini
@@ -94,7 +94,9 @@ deps =
     w3lib==1.17.0
     zope.interface==5.1.0
     lxml==4.3.0
-    xtractmime==0.1.0
+    # TODO: Release a new version of xtractmime and use it as the pinned
+    # version here.
+    xtractmime@git+https://github.com/scrapy/xtractmime@c65d09c94836547dd7c6a659fe9740c112253526
     -rtests/requirements.txt
 
     # mitmproxy 4.0.4+ requires upgrading some of the pinned dependencies
