fix: skip doctests in pinned environments

--- a/tox.ini
+++ b/tox.ini
@@ -100,7 +100,7 @@ setenv =
 install_command =
     python -I -m pip install {opts} {packages}
 commands =
-    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 docs scrapy tests}
+    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 scrapy tests}
 
 [testenv:pinned]
 basepython = python3.7
