fix: testenv:pypy3

--- a/tox.ini
+++ b/tox.ini
@@ -156,7 +156,7 @@ basepython = {[testenv:pypy3]basepython}
 deps =
     {[pinned]deps}
     PyPyDispatcher==2.1.0
-commands = {[pinned]commands}
+commands = {[testenv:pypy3]commands}
 install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
