Configure bump2version to update SECURITY.md

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,3 +5,7 @@ tag = True
 tag_name = {new_version}
 
 [bumpversion:file:scrapy/VERSION]
+
+[bumpversion:file:SECURITY.md]
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.x
+serialize = {major}.{minor}.x
