--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ include NEWS
 
 include scrapy/VERSION
 include scrapy/mime.types
+include scrapy/py.typed
 
 include codecov.yml
 include conftest.py
