Add an interactive test for `scrapy shell`.

--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,5 +1,6 @@
 # Tests requirements
 attrs
+pexpect >= 4.8.0
 # https://github.com/giampaolo/pyftpdlib/issues/560
 pyftpdlib; python_version < "3.12"
 pytest
