--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -30,6 +30,9 @@ jobs:
         - python-version: pypy3.9
           env:
             TOXENV: pypy3
+        - python-version: pypy3.10
+          env:
+            TOXENV: pypy3
 
         # pinned deps
         - python-version: 3.8.17
@@ -38,7 +41,7 @@ jobs:
         - python-version: 3.8.17
           env:
             TOXENV: asyncio-pinned
-        - python-version: pypy3.8
+        - python-version: pypy3.9
           env:
             TOXENV: pypy3-pinned
         - python-version: 3.8.17
@@ -69,7 +72,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install system libraries
-      if: matrix.python-version == 'pypy3.9' || contains(matrix.env.TOXENV, 'pinned')
+      if: contains(matrix.python-version, 'pypy') || contains(matrix.env.TOXENV, 'pinned')
       run: |
         sudo apt-get update
         sudo apt-get install libxml2-dev libxslt-dev
