Add mypy tests.

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,14 @@ deps =
 commands =
     mypy {posargs: scrapy tests}
 
+[testenv:typing-tests]
+deps =
+    {[testenv]deps}
+    {[testenv:typing]deps}
+    pytest-mypy-testing==0.1.1
+commands =
+    pytest {posargs: tests_typing}
+
 [testenv:pre-commit]
 basepython = python3
 deps =
