Fix env deps for typing-tests.

--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ commands =
 
 [testenv:typing-tests]
 deps =
-    {[testenv]deps}
+    -rtests/requirements.txt
     {[testenv:typing]deps}
     pytest-mypy-testing==0.1.1
 commands =
