Fix the tox configuration for end-of-life Python support

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@
 
 [tox]
 envlist = py27
+# https://tox.wiki/en/4.11.3/faq.html#testing-end-of-life-python-versions
+requires = virtualenv<20.22.0
 
 [testenv]
 deps =
