--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27
+envlist = py27-pinned,py27,py27-extra-deps,pypy2,py35,py35-pinned,py36,py37,py38,py38-extra-deps,pypy3
 # https://tox.wiki/en/4.11.3/faq.html#testing-end-of-life-python-versions
 requires = virtualenv<20.22.0
 
