--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,12 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27-pinned,py27,py27-extra-deps,pypy2,py35,py35-pinned,py36,py37,py38,py38-extra-deps,pypy3
+envlist = py27-pinned,py27,py27-extra-deps,pypy2,py35-pinned,py35,py36,py37,py38,py38-extra-deps,pypy3
 # https://tox.wiki/en/4.11.3/faq.html#testing-end-of-life-python-versions
 requires = virtualenv<20.22.0
 
 [testenv]
 deps =
-    -ctests/constraints.txt
     -rrequirements-py2.txt
     # Extras
     botocore>=1.3.23
@@ -30,7 +29,6 @@ commands =
 [testenv:py27-pinned]
 basepython = python2.7
 deps =
-    -ctests/constraints.txt
     cryptography==2.0
     cssselect==0.9.1
     lxml==3.5.0
@@ -49,7 +47,14 @@ deps =
     botocore==1.3.23
     Pillow==3.4.2
 
-[testenv:pypy]
+[testenv:py27-extra-deps]
+basepython = python2.7
+deps =
+    {[testenv]deps}
+    reppy==0.3.4
+    robotexclusionrulesparser
+
+[testenv:pypy2]
 basepython = pypy2
 commands =
     py.test {posargs:scrapy tests}
@@ -57,10 +62,10 @@ commands =
 [testenv:py35]
 basepython = python3.5
 deps =
-    -ctests/constraints.txt
     -rrequirements-py3.txt
     -rtests/requirements-py3.txt
     mock
+
     # Extras
     botocore>=1.3.23
     Pillow>=3.4.2
@@ -68,7 +73,6 @@ deps =
 [testenv:py35-pinned]
 basepython = python3.5
 deps =
-    -ctests/constraints.txt
     cryptography==2.0
     cssselect==0.9.1
     lxml==3.5.0
@@ -134,12 +138,4 @@ commands =
 basepython = python3.8
 deps =
     {[testenv:py35]deps}
-    reppy
-    robotexclusionrulesparser
-
-[testenv:py27-extra-deps]
-basepython = python2.7
-deps =
-    {[testenv]deps}
-    reppy
     robotexclusionrulesparser
