Freeze Twisted==16.4.1 for PyPy 2.7 tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist = py27-pinned,py27,py27-extra-deps,pypy2,py35-pinned,py35,py36,py37,py38
 # https://tox.wiki/en/4.11.3/faq.html#testing-end-of-life-python-versions
 requires = virtualenv<20.22.0
 
-[testenv]
+[py27]
 deps =
     -rrequirements-py2.txt
     # Extras
@@ -17,6 +17,12 @@ deps =
     leveldb
     Pillow>=3.4.2
     -rtests/requirements-py2.txt
+
+[testenv]
+deps =
+    {[py27]deps}
+    # >=21.2.0 causes https://github.com/scrapy/scrapy/issues/5020
+    Twisted>=16.0.0,<21.2.0
 passenv =
     S3_TEST_FILE_URI
     AWS_ACCESS_KEY_ID
@@ -58,6 +64,10 @@ deps =
 basepython = pypy2
 commands =
     py.test {posargs:scrapy tests}
+deps =
+    {[py27]deps}
+    # Latest version that won’t fail due to the use of the typing module.
+    Twisted==16.4.1
 
 [testenv:py35]
 basepython = python3.5
