Add Python 3.13 alpha to CI

--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -27,7 +27,10 @@ jobs:
         - python-version: "3.12"
           env:
             TOXENV: py
-        - python-version: "3.12"
+        - python-version: "3.13.0-alpha.2"
+          env:
+            TOXENV: py
+        - python-version: "3.13.0-alpha.2"
           env:
             TOXENV: asyncio
 
