--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.12
+          python-version: "3.13.0-alpha.2"
       - run: | 
           pip install --upgrade build twine
           python -m build
