Mark slow tests, with their own tox env and CI job

--- a/tox.ini
+++ b/tox.ini
@@ -221,3 +221,9 @@ setenv =
     {[pinned]setenv}
 commands =
     pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -k s3}
+
+
+[testenv:slow]
+basepython = python3
+commands =
+    {[testenv]commands} -m 'slow'
