--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -47,6 +47,9 @@ jobs:
         - python-version: "3.11"
           env:
             TOXENV: botocore
+        - python-version: "3.11"
+          env:
+            TOXENV: slow
 
         - python-version: "3.12.0-rc.2"
           env:
@@ -57,6 +60,9 @@ jobs:
         - python-version: "3.12.0-rc.2"
           env:
             TOXENV: extra-deps
+        - python-version: "3.12.0-rc.2"
+          env:
+            TOXENV: slow
 
     steps:
     - uses: actions/checkout@v3
