Pin the Python version for typing-tests.

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ commands =
     mypy {posargs: scrapy tests}
 
 [testenv:typing-tests]
+basepython = python3.8
 deps =
     -rtests/requirements.txt
     {[testenv:typing]deps}
