--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: "3.12"
+        # pylint < 3 is needed due to a bug in later versions affecting us,
+        # but Python 3.12 was introduced in later versions.
+        - python-version: "3.11"
           env:
             TOXENV: pylint
         - python-version: 3.8
