CI: disable pypy3

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27-pinned,py27,py27-extra-deps,pypy2,py35-pinned,py35,py36,py37,py38,py38-extra-deps,pypy3
+envlist = py27-pinned,py27,py27-extra-deps,pypy2,py35-pinned,py35,py36,py37,py38,py38-extra-deps
 # https://tox.wiki/en/4.11.3/faq.html#testing-end-of-life-python-versions
 requires = virtualenv<20.22.0
 
@@ -115,11 +115,13 @@ deps = {[testenv:py35]deps}
 basepython = python3.8
 deps = {[testenv:py35]deps}
 
-[testenv:pypy3]
-basepython = pypy3
-deps = {[testenv:py35]deps}
-commands =
-    py.test {posargs:scrapy tests}
+; Will not work due to “requires = virtualenv<20.22.0” above, which is required
+; for py2.7 to work.
+; [testenv:pypy3]
+; basepython = pypy3
+; deps = {[testenv:py35]deps}
+; commands =
+;     py.test {posargs:scrapy tests}
 
 [docs]
 changedir = docs
