--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,10 +39,11 @@ jobs:
         - python-version: 3.8
           env:
             TOXENV: py38-extra-deps
-        - python-version: pypy3
-          env:
-            TOXENV: pypy3
-            PYPY_VERSION: '3.7-v7.3.5'
+        # See tox.ini for details
+        # - python-version: pypy3
+        #   env:
+        #     TOXENV: pypy3
+        #     PYPY_VERSION: '3.7-v7.3.5'
 
     steps:
     - uses: actions/checkout@v2
