--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,19 +8,20 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: 2.7
-          env:
-            TOXENV: py27-pinned
-        - python-version: 2.7
-          env:
-            TOXENV: py27
-        - python-version: 2.7
-          env:
-            TOXENV: py27-extra-deps
-        - python-version: pypy3
-          env:
-            TOXENV: pypy2
-            PYPY_VERSION: '2.7-v7.3.5'
+        # https://github.com/actions/setup-python/issues/672
+        # - python-version: 2.7
+        #   env:
+        #     TOXENV: py27-pinned
+        # - python-version: 2.7
+        #   env:
+        #     TOXENV: py27
+        # - python-version: 2.7
+        #   env:
+        #     TOXENV: py27-extra-deps
+        # - python-version: pypy3
+        #   env:
+        #     TOXENV: pypy2
+        #     PYPY_VERSION: '2.7-v7.3.5'
         - python-version: 3.5
           env:
             TOXENV: py35-pinned
