CI: remove non-ASCII chars from tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -115,7 +115,7 @@ deps = {[testenv:py35]deps}
 basepython = python3.8
 deps = {[testenv:py35]deps}
 
-; Will not work due to “requires = virtualenv<20.22.0” above, which is required
+; Will not work due to "requires = virtualenv<20.22.0" above, which is required
 ; for py2.7 to work.
 ; [testenv:pypy3]
 ; basepython = pypy3
