--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -15,21 +15,21 @@ jobs:
         - python-version: 3.8
           env:
             TOXENV: windows-pinned
-        - python-version: 3.9
-          env:
-            TOXENV: py
-        - python-version: "3.10"
-          env:
-            TOXENV: py
-        - python-version: "3.11"
-          env:
-            TOXENV: py
-        - python-version: "3.12"
-          env:
-            TOXENV: py
-        - python-version: "3.12"
-          env:
-            TOXENV: asyncio
+        # - python-version: 3.9
+        #   env:
+        #     TOXENV: py
+        # - python-version: "3.10"
+        #   env:
+        #     TOXENV: py
+        # - python-version: "3.11"
+        #   env:
+        #     TOXENV: py
+        # - python-version: "3.12"
+        #   env:
+        #     TOXENV: py
+        # - python-version: "3.12"
+        #   env:
+        #     TOXENV: asyncio
 
     steps:
     - uses: actions/checkout@v4
