--- a/tox.ini
+++ b/tox.ini
@@ -29,14 +29,14 @@ install_command =
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==1.6.1
-    typing-extensions==4.8.0
+    mypy==1.8.0
+    typing-extensions==4.10.0
     types-attrs==19.1.0
-    types-lxml==2023.10.21
-    types-Pillow==10.1.0.0
-    types-Pygments==2.16.0.0
-    types-pyOpenSSL==23.3.0.0
-    types-setuptools==68.2.0.0
+    types-lxml==2024.2.9
+    types-Pillow==10.2.0.20240213
+    types-Pygments==2.17.0.20240106
+    types-pyOpenSSL==24.0.0.20240130
+    types-setuptools==69.1.0.20240223
     # 2.1.2 fixes a typing bug: https://github.com/scrapy/w3lib/pull/211
     w3lib >= 2.1.2
 commands =
