--- a/tox.ini
+++ b/tox.ini
@@ -226,3 +226,12 @@ setenv =
     {[pinned]setenv}
 commands =
     pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -k s3}
+
+
+# Run brotlipy-specific tests.
+[testenv:brotlipy]
+deps =
+    {[testenv]deps}
+    brotlipy
+commands =
+    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -k brotlipy}
