--- a/tox.ini
+++ b/tox.ini
@@ -141,6 +141,7 @@ deps =
     google-cloud-storage==1.29.0
     Pillow==7.1.0
     robotexclusionrulesparser==1.6.2
+    brotlipy
 install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
