--- a/tox.ini
+++ b/tox.ini
@@ -162,6 +162,7 @@ basepython = {[testenv:pypy3]basepython}
 deps =
     {[pinned]deps}
     PyPyDispatcher==2.1.0
+    brotlicffi
 commands =
     pytest --durations=10 scrapy tests
 install_command = {[pinned]install_command}
