--- a/tox.ini
+++ b/tox.ini
@@ -124,7 +124,7 @@ deps =
     robotexclusionrulesparser
     Pillow
     Twisted[http2]
-    brotli
+    brotli; implementation_name != 'pypy'
     zstandard
 
 [testenv:extra-deps-pinned]
