Remove PyPy condition

--- a/tox.ini
+++ b/tox.ini
@@ -124,7 +124,7 @@ deps =
     robotexclusionrulesparser
     Pillow
     Twisted[http2]
-    brotli; implementation_name != 'pypy'
+    brotli
     zstandard
 
 [testenv:extra-deps-pinned]
