--- a/.coveragerc
+++ b/.coveragerc
@@ -4,3 +4,9 @@ include = scrapy/*
 omit =
   tests/*
 disable_warnings = include-ignored
+
+[report]
+# https://github.com/nedbat/coveragepy/issues/831#issuecomment-517778185
+exclude_lines =
+    pragma: no cover
+    if TYPE_CHECKING:
