--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: "3.13.0-alpha.2"
+        - python-version: "3.13.0-beta.1"
           env:
             TOXENV: pylint
         - python-version: 3.8
@@ -24,7 +24,7 @@ jobs:
         - python-version: "3.11"  # Keep in sync with .readthedocs.yml
           env:
             TOXENV: docs
-        - python-version: "3.13.0-alpha.2"
+        - python-version: "3.13.0-beta.1"
           env:
             TOXENV: twinecheck
 
