--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -24,10 +24,10 @@ jobs:
         - python-version: "3.12"
           env:
             TOXENV: py
-        - python-version: "3.13.0-alpha.2"
+        - python-version: "3.13.0-beta.1"
           env:
             TOXENV: py
-        - python-version: "3.13.0-alpha.2"
+        - python-version: "3.13.0-beta.1"
           env:
             TOXENV: asyncio
         - python-version: pypy3.9
@@ -54,10 +54,10 @@ jobs:
           env:
             TOXENV: botocore-pinned
 
-        - python-version: "3.13.0-alpha.2"
+        - python-version: "3.13.0-beta.1"
           env:
             TOXENV: extra-deps
-        - python-version: "3.13.0-alpha.2"
+        - python-version: "3.13.0-beta.1"
           env:
             TOXENV: botocore
 
