Skip zstandard on 3.13.

--- a/tox.ini
+++ b/tox.ini
@@ -155,7 +155,7 @@ deps =
     bpython  # optional for shell wrapper tests
     brotli; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
     brotlicffi; implementation_name == 'pypy'  # optional for HTTP compress downloader middleware tests
-    zstandard; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
+    zstandard; implementation_name != 'pypy' and python_version < '3.13'  # optional for HTTP compress downloader middleware tests
     ipython
 
 [testenv:extra-deps-pinned]
