Skip mitmproxy and Pillow on 3.13.

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,8 @@ deps =
     {[test-requirements]deps}
 
     # mitmproxy does not support PyPy
-    mitmproxy; implementation_name != 'pypy'
+    # mitmproxy requires zstandard which is not yet available on 3.13
+    mitmproxy; implementation_name != 'pypy' and python_version < '3.13'
     # https://github.com/pallets/werkzeug/pull/2768 breaks flask, required by
     # mitmproxy.
     werkzeug < 3; python_version < '3.9' and implementation_name != 'pypy'
@@ -150,7 +151,7 @@ deps =
     # restrictions in their deps, so we need to pin old markupsafe here too.
     markupsafe < 2.1.0
     robotexclusionrulesparser
-    Pillow
+    Pillow; python_version < '3.13'
     Twisted[http2]
     uvloop; platform_system != "Windows"
     bpython  # optional for shell wrapper tests
