--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -36,6 +36,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install system libraries
+      if: contains(matrix.python-version, 'beta')
+      run: |
+        sudo apt-get update
+        sudo apt-get install libxml2-dev libxslt-dev
+
     - name: Run check
       env: ${{ matrix.env }}
       run: |
