Skip uvloop and bpython on 3.13.

--- a/tox.ini
+++ b/tox.ini
@@ -153,8 +153,8 @@ deps =
     robotexclusionrulesparser
     Pillow; python_version < '3.13'
     Twisted[http2]
-    uvloop; platform_system != "Windows"
-    bpython  # optional for shell wrapper tests
+    uvloop; platform_system != "Windows" and python_version < '3.13'
+    bpython; python_version < '3.13'  # optional for shell wrapper tests
     brotli; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
     brotlicffi; implementation_name == 'pypy'  # optional for HTTP compress downloader middleware tests
     zstandard; implementation_name != 'pypy' and python_version < '3.13'  # optional for HTTP compress downloader middleware tests
