--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,4 +27,5 @@ repos:
   hooks:
   - id: pyupgrade
     args: [--py38-plus, --keep-runtime-typing]
+    # scrapy/__init__.py has a sys.version_info check we want to keep
     exclude: scrapy/__init__.py
