--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
   rev: 7.0.0
   hooks:
   - id: flake8
+    additional_dependencies:
+    - flake8-debugger
 - repo: https://github.com/psf/black.git
   rev: 24.2.0
   hooks:
