--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     additional_dependencies:
     - flake8-comprehensions
     - flake8-debugger
+    - flake8-docstrings
     - flake8-string-format
 - repo: https://github.com/psf/black.git
   rev: 24.2.0
