Revert "Merge branch 'scrapy:master' into master"
This reverts commit 2a5e30e5a191877537dd548d0dce0eb182b3184b, reversing
changes made to 69000f483508f2faee1cef3194f9dc62be55ad98.

^X

--- a/tox.ini
+++ b/tox.ini
@@ -147,6 +147,9 @@ deps =
     {[testenv]deps}
     boto3
     google-cloud-storage
+    # Twisted[http2] currently forces old mitmproxy because of h2 version
+    # restrictions in their deps, so we need to pin old markupsafe here too.
+    markupsafe < 2.1.0
     robotexclusionrulesparser
     Pillow
     Twisted[http2]
