Restore backward compatibility in the scraper

--- a/tox.ini
+++ b/tox.ini
@@ -97,6 +97,7 @@ commands =
 [pinned]
 basepython = python3.8
 deps =
+    classutilities==0.2.1
     cryptography==36.0.0
     cssselect==0.9.1
     h2==3.0
