Ignore warnings from third-parties during tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -26,3 +26,5 @@ filterwarnings =
     ignore:Module scrapy.utils.reqser is deprecated
     ignore:typing.re is deprecated
     ignore:typing.io is deprecated
+    ignore:::h2
+    ignore:::w3lib
