Use win-precise-time if available

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     sybil >= 1.3.0  # https://github.com/cjw296/sybil/issues/20#issuecomment-605433422
     testfixtures
     pywin32; sys_platform == "win32"
+    win-precise-time; sys_platform == "win32"
 
 [testenv]
 deps =
