Revert cffi and Pillow restrictions.

--- a/tox.ini
+++ b/tox.ini
@@ -19,15 +19,13 @@ deps =
     sybil >= 1.3.0  # https://github.com/cjw296/sybil/issues/20#issuecomment-605433422
     testfixtures
     pywin32; sys_platform == "win32"
-    cffi >= 1.17.0rc1; python_version >= '3.13'
 
 [testenv]
 deps =
     {[test-requirements]deps}
 
     # mitmproxy does not support PyPy
-    # mitmproxy requires zstandard which is not yet available on 3.13
-    mitmproxy; implementation_name != 'pypy' and python_version < '3.13'
+    mitmproxy; implementation_name != 'pypy'
     # https://github.com/pallets/werkzeug/pull/2768 breaks flask, required by
     # mitmproxy.
     werkzeug < 3; python_version < '3.9' and implementation_name != 'pypy'
@@ -150,13 +148,13 @@ deps =
     boto3
     google-cloud-storage
     robotexclusionrulesparser
-    Pillow; python_version < '3.13'
+    Pillow
     Twisted[http2]
     uvloop; platform_system != "Windows" and python_version < '3.13'
     bpython; python_version < '3.13'  # optional for shell wrapper tests
     brotli; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
     brotlicffi; implementation_name == 'pypy'  # optional for HTTP compress downloader middleware tests
-    zstandard; implementation_name != 'pypy' and python_version < '3.13'  # optional for HTTP compress downloader middleware tests
+    zstandard; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
     ipython
 
 [testenv:extra-deps-pinned]
