--- a/tox.ini
+++ b/tox.ini
@@ -46,16 +46,16 @@ install_command =
 [testenv:typing]
 basepython = python3
 deps =
-    mypy==1.10.1
+    mypy==1.11.1
     typing-extensions==4.12.2
-    types-lxml==2024.4.14
+    types-lxml==2024.8.7
     types-Pygments==2.18.0.20240506
-    types-pyOpenSSL==24.1.0.20240425
-    types-setuptools==70.3.0.20240710
-    botocore-stubs==1.34.143
-    boto3-stubs[s3]==1.34.143
+    types-setuptools==71.1.0.20240806
+    botocore-stubs==1.34.158
+    boto3-stubs[s3]==1.34.158
     attrs >= 18.2.0
     Pillow >= 10.3.0
+    pyOpenSSL >= 24.2.1
     pytest >= 8.2.0
     w3lib >= 2.2.0
 commands =
