--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: 3.9
+        - python-version: "3.9"
           env:
             TOXENV: py
         - python-version: "3.10"
@@ -35,19 +35,19 @@ jobs:
             TOXENV: pypy3
 
         # pinned deps
-        - python-version: 3.8.17
+        - python-version: 3.9.19
           env:
             TOXENV: pinned
-        - python-version: 3.8.17
+        - python-version: 3.9.19
           env:
             TOXENV: asyncio-pinned
-        - python-version: pypy3.8
+        - python-version: pypy3.9
           env:
             TOXENV: pypy3-pinned
-        - python-version: 3.8.17
+        - python-version: 3.9.19
           env:
             TOXENV: extra-deps-pinned
-        - python-version: 3.8.17
+        - python-version: 3.9.19
           env:
             TOXENV: botocore-pinned
 
