--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -12,12 +12,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: 3.8
+        - python-version: "3.9"
           env:
             TOXENV: windows-pinned
-        - python-version: 3.9
-          env:
-            TOXENV: py
         - python-version: "3.10"
           env:
             TOXENV: py
