--- a/tox.ini
+++ b/tox.ini
@@ -150,7 +150,7 @@ deps =
     robotexclusionrulesparser
     Pillow
     Twisted[http2]
-    uvloop; platform_system != "Windows"
+    uvloop; platform_system != "Windows" and python_version < '3.13'
     bpython; python_version < '3.13'  # optional for shell wrapper tests
     brotli; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
     brotlicffi; implementation_name == 'pypy'  # optional for HTTP compress downloader middleware tests
