--- a/tox.ini
+++ b/tox.ini
@@ -151,7 +151,7 @@ deps =
     Pillow
     Twisted[http2]
     uvloop; platform_system != "Windows" and python_version < '3.13'
-    bpython; python_version < '3.13'  # optional for shell wrapper tests
+    bpython # optional for shell wrapper tests
     brotli; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
     brotlicffi; implementation_name == 'pypy'  # optional for HTTP compress downloader middleware tests
     zstandard; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
