--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -24,10 +24,10 @@ jobs:
         - python-version: "3.12"
           env:
             TOXENV: py
-        - python-version: "3.13.0-beta.1"
+        - python-version: "3.13"
           env:
             TOXENV: py
-        - python-version: "3.13.0-beta.1"
+        - python-version: "3.13"
           env:
             TOXENV: asyncio
         - python-version: pypy3.9
@@ -54,10 +54,10 @@ jobs:
           env:
             TOXENV: botocore-pinned
 
-        - python-version: "3.13.0-beta.1"
+        - python-version: "3.13"
           env:
             TOXENV: extra-deps
-        - python-version: "3.13.0-beta.1"
+        - python-version: "3.13"
           env:
             TOXENV: botocore
 
@@ -70,7 +70,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install system libraries
-      if: contains(matrix.python-version, 'pypy') || contains(matrix.python-version, 'beta') || contains(matrix.env.TOXENV, 'pinned')
+      if: contains(matrix.python-version, 'pypy') || contains(matrix.env.TOXENV, 'pinned')
       run: |
         sudo apt-get update
         sudo apt-get install libxml2-dev libxslt-dev
