--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -27,10 +27,10 @@ jobs:
         - python-version: "3.12"
           env:
             TOXENV: py
-        - python-version: "3.13.0-beta.1"
+        - python-version: "3.13"
           env:
             TOXENV: py
-        - python-version: "3.13.0-beta.1"
+        - python-version: "3.13"
           env:
             TOXENV: asyncio
 
