add support for Python 3.13

--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -24,6 +24,9 @@ jobs:
         - python-version: "3.12"
           env:
             TOXENV: py
+        - python-version: "3.13"
+          env:
+            TOXENV: py
         - python-version: "3.12"
           env:
             TOXENV: asyncio
