--- a/tox.ini
+++ b/tox.ini
@@ -149,8 +149,8 @@ deps =
     robotexclusionrulesparser
     Pillow
     Twisted[http2]
-    uvloop; platform_system != "Windows" and python_version < '3.13'
-    bpython # optional for shell wrapper tests
+    uvloop; platform_system != "Windows"
+    bpython  # optional for shell wrapper tests
     brotli; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
     brotlicffi; implementation_name == 'pypy'  # optional for HTTP compress downloader middleware tests
     zstandard; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
