--- a/pytest.ini
+++ b/pytest.ini
@@ -21,8 +21,6 @@ markers =
     only_asyncio: marks tests as only enabled when --reactor=asyncio is passed
     only_not_asyncio: marks tests as only enabled when --reactor=asyncio is not passed
     requires_uvloop: marks tests as only enabled when uvloop is known to be working
+    requires_botocore: marks tests that need botocore (but not boto3)
+    requires_boto3: marks tests that need botocore and boto3
 filterwarnings =
-    ignore:scrapy.downloadermiddlewares.decompression is deprecated
-    ignore:Module scrapy.utils.reqser is deprecated
-    ignore:typing.re is deprecated
-    ignore:typing.io is deprecated
