add bandit to toml
added bump-my-version to toml

added coverage to pyproject.toml

added isort.cfg to toml

add pylintrc to toml

add pytest to toml

migrated setup.py to pyproject.toml

fixes test errors

removed setup.cfg

tested timeout value

test2

test3

Bump version: 2.11.2 → 2.12.0

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,8 @@ repos:
   rev: 1.7.9
   hooks:
   - id: bandit
-    args: [-r, -c, .bandit.yml]
+    args: ["-c", "pyproject.toml"]
+    additional_dependencies: ["bandit[toml]"]
 - repo: https://github.com/PyCQA/flake8
   rev: 7.1.0
   hooks:
