--- a/tox.ini
+++ b/tox.ini
@@ -79,7 +79,7 @@ deps =
     {[testenv:extra-deps]deps}
     pylint==3.2.5
 commands =
-    pylint conftest.py docs extras scrapy setup.py tests
+    pylint conftest.py docs extras scrapy tests
 
 [testenv:twinecheck]
 basepython = python3
