Enable flake8-implicit-str-concat rules in ruff.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -236,6 +236,8 @@ extend-select = [
     "FA",
     # refurb
     "FURB",
+    # flake8-implicit-str-concat
+    "ISC",
     # flake8-logging
     "LOG",
     # flake8-quotes
