--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
   rev: v0.8.1
   hooks:
     - id: ruff
+      args: [ --fix ]
 - repo: https://github.com/psf/black.git
   rev: 24.4.2
   hooks:
